Corrected param db saving