@@ -6,26 +6,38 @@ import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map.Entry;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import uk.co.matchboard.app.exception.InvalidJobException;
+import uk.co.matchboard.app.functional.OptionalResult;
 import uk.co.matchboard.app.functional.Result;
 import uk.co.matchboard.app.model.config.ConfigResponse;
 import uk.co.matchboard.app.model.config.KeyValuePair;
 import uk.co.matchboard.app.model.job.CreateJob;
 import uk.co.matchboard.app.model.job.CreateJobPart;
 import uk.co.matchboard.app.model.job.Job;
+import uk.co.matchboard.app.model.job.JobPart;
 import uk.co.matchboard.app.model.job.JobStatus;
-import uk.co.matchboard.app.model.job.SchedulableJobPartParam;
 import uk.co.matchboard.app.model.job.SchedulableJobParts;
-import uk.co.matchboard.app.model.job.SchedulableJobPhase;
-import uk.co.matchboard.app.model.job.SchedulableJobPhases;
+import uk.co.matchboard.app.model.job.ScheduledJobPartParam;
+import uk.co.matchboard.app.model.job.ScheduledJobPhase;
+import uk.co.matchboard.app.model.job.ScheduledJobPhases;
 import uk.co.matchboard.app.model.job.UpdateSchedule;
 
 @Service
 public class JobServiceImpl implements JobService {
 
-    private record PartPhaseKey(int partNumber, int phaseNumber) {
+    public enum RoleMatch {
+        NOT_THIS_ROLE,
+        YES,
+        NONE
+    }
+
+    private record PartPhaseKey(int partNumber, int phaseNumber, int jobPartPhaseId) {
 
     }
 
@@ -48,8 +60,8 @@ public class JobServiceImpl implements JobService {
         // Validate job
 
         // If all don't match -> saved
-        // If some don't match -> partically schedulable
-        // If all match -> scheduleable
+        // If some don't match -> partially schedulable
+        // If all match -> schedulable
 
         JobStatus jobStatus =
                 job.parts().stream().anyMatch(p -> isSchedulable(job, p, null))
@@ -58,7 +70,7 @@ public class JobServiceImpl implements JobService {
         return databaseService.createJob(job,
                 part -> isSchedulable(job, part, jobStatus) ? JobStatus.SCHEDULABLE.getCode()
                         : JobStatus.SAVED.getCode(),
-                (phase, lastStatus) -> {
+                (_, lastStatus) -> {
                     if (lastStatus == -1 && jobStatus == JobStatus.SCHEDULABLE) {
                         return JobStatus.READY.getCode();
                     } else {
@@ -69,7 +81,8 @@ public class JobServiceImpl implements JobService {
     }
 
     private static boolean isSchedulable(CreateJob job, CreateJobPart p, JobStatus jobStatus) {
-        return job.paymentReceived() && p.scheduleFor() != null && p.materialAvailable();
+        return job.paymentReceived() && p.scheduleFor() != null && p.materialAvailable()
+                && jobStatus != JobStatus.SAVED;
     }
 
     @Override
@@ -92,9 +105,37 @@ public class JobServiceImpl implements JobService {
     }
 
     @Override
-    public Result<SchedulableJobPhases> getSchedule(String date, String role) {
+    public Result<ScheduledJobPhases> getSchedule(String date, String role) {
+        return getScheduleParamsFor(date).map(
+                params -> params.values().stream().filter(group -> group.stream().anyMatch(r ->
+                                r.paramConfig() != null
+                                        && isForRole(r.paramConfig(), role)
+                                        && isPhaseRunInput(r.paramInput())
+                        ))
+                        .map(group -> {
+                            ScheduledJobPartParam r = group.getFirst();
+                            return new ScheduledJobPhase(
+                                    r.jobNumber(),
+                                    r.jobParts(),
+                                    r.jobPartId(),
+                                    r.partNumber(),
+                                    r.name(),
+                                    r.oldName(),
+                                    r.quantity(),
+                                    r.status(),
+                                    r.phaseDescription(),
+                                    r.phaseNumber(),
+                                    r.specialInstruction(),
+                                    r.phaseStatus()
+                            );
+                        })
+                        .toList()).map(ScheduledJobPhases::new);
+    }
+
+    private Result<LinkedHashMap<PartPhaseKey, List<ScheduledJobPartParam>>> getScheduleParamsFor(
+            String date) {
         OffsetDateTime fromDate = null;
-        OffsetDateTime toDate = null;
+        OffsetDateTime toDate;
         if (date == null) {
             toDate = LocalDate.now(ZoneOffset.UTC).atStartOfDay()
                     .atOffset(ZoneOffset.UTC);
@@ -105,38 +146,14 @@ public class JobServiceImpl implements JobService {
             fromDate = toDate;
         }
 
-        databaseService.getScheduleForRole(fromDate, toDate).map(params -> {
-            return params.stream()
-                    .collect(Collectors.groupingBy(
-                            r -> new PartPhaseKey(r.partNumber(), r.phaseNumber())
-                    ))
-                    .values().stream()
-                    .filter(group -> group.stream().anyMatch(r ->
-                            r.paramConfig() != null
-                                    && isForRole(r.paramConfig(), role)   // or equals(...)
-                                    && isPhaseRunInput(r.paramInput())
-                    ))
-                    .map(group -> {
-                        SchedulableJobPartParam r = group.getFirst();
-                        return new SchedulableJobPhase(
-                                r.jobNumber(),
-                                r.jobParts(),
-                                r.jobPartId(),
-                                r.partNumber(),
-                                r.name(),
-                                r.oldName(),
-                                r.quantity(),
-                                r.status(),
-                                r.phaseDescription(),
-                                r.phaseNumber(),
-                                r.specialInstruction(),
-                                r.phaseStatus()
-                        );
-                    })
-                    .toList();
-        });
-
-        return null;
+        return databaseService.getScheduleForRole(fromDate, toDate).map(params ->
+                params.stream()
+                        .collect(Collectors.groupingBy(
+                                r -> new PartPhaseKey(r.partNumber(), r.phaseNumber(),
+                                        r.jobPartPhaseId()),
+                                LinkedHashMap::new,
+                                Collectors.toList()
+                        )));
     }
 
     private boolean isPhaseRunInput(int input) {
@@ -152,5 +169,70 @@ public class JobServiceImpl implements JobService {
         return databaseService.updateSchedule(
                         OffsetDateTime.parse(schedule.date() + "T00:00:00+00:00"), schedule.jobPartIds())
                 .flatMap(_ -> getSchedule(schedule.date()));
+    }
+
+    @Override
+    public OptionalResult<JobPart> nextJob(String role) {
+        return getScheduleParamsFor(null).flatMapOptional(params -> {
+            List<Integer> phasesToMarkDone = new ArrayList<>();
+            PartPhaseKey foundPhaseKey = null;
+
+            for (Entry<PartPhaseKey, List<ScheduledJobPartParam>> entry : params.entrySet()) {
+                RoleMatch groupMatch = classifyGroup(entry.getValue(), role);
+
+                if (groupMatch == RoleMatch.NONE) {
+                    phasesToMarkDone.add(entry.getValue().getFirst().jobPhaseId());
+                    continue;
+                }
+
+                if (groupMatch == RoleMatch.YES) {
+                    foundPhaseKey = entry.getKey();
+                    break;
+                }
+            }
+
+            PartPhaseKey phaseKey = foundPhaseKey;
+            return databaseService.completePhasesAndStart(phasesToMarkDone,
+                    phaseKey == null ? null : phaseKey.jobPartPhaseId());
+        });
+
+    }
+
+    private RoleMatch roleMatch(String config, String role) {
+        if (config == null) {
+            return RoleMatch.NONE;
+        }
+
+        if (config.contains("(" + role + ")")) {
+            return RoleMatch.YES;
+        }
+
+        if (config.startsWith("SIGN(")) {
+            return RoleMatch.NOT_THIS_ROLE;
+        }
+
+        return RoleMatch.NONE;
+    }
+
+    private RoleMatch classifyGroup(List<ScheduledJobPartParam> group, String role) {
+        boolean sawNotThisRole = false;
+
+        for (ScheduledJobPartParam r : group) {
+            if (!isPhaseRunInput(r.paramInput())) {
+                continue;
+            }
+
+            RoleMatch match = roleMatch(r.paramConfig(), role);
+
+            if (match == RoleMatch.YES) {
+                return RoleMatch.YES;
+            }
+
+            if (match == RoleMatch.NOT_THIS_ROLE) {
+                sawNotThisRole = true;
+            }
+        }
+
+        return sawNotThisRole ? RoleMatch.NOT_THIS_ROLE : RoleMatch.NONE;
     }
 }
